<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EMapper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="exit">保存</string>
    <!-- 主界面 -->
    <string name="icon1">标定航点</string>
    <string name="icon2">航点管理</string>
    <string name="icon3">航线管理</string>
    <string name="icon4">航迹管理</string>
    <string name="icon5">地图</string>
    <string name="icon6">拍照</string>
    <string name="icon7">设置</string>
    <string name="icon8">面积测量</string>
    <string name="icon9">关于</string>
    <string name="title_activity_set">SetActivity</string>
    <!-- 设置界面 -->
    <string name="set1">系统设置</string>
    <string name="set2">警告设置</string>
    <string name="set3">坐标设置</string>
    <string name="set4">单位设置</string>
    <string name="set5">地图设置</string>
    <string name="set6">云储存设置</string>
    <string name="set7">报警点</string>
    <string name="set8">退出</string>
    <string name="title_activity_calibration_point">CalibrationPointActivity</string>
    <!-- 标定航点界面 -->
    <string name="lon">经度</string>
    <string name="lat">纬度</string>
    <string name="high">高度</string>
    <string name="precision">精度</string>
    <string name="time">时间</string>
    <string name="remark">备注</string>
    <string name="navigation">导航</string>
    <string name="map">地图</string>
    <string name="picture">查看照片</string>
    <string name="save">保存</string>
    <string name="title">提示</string>
    <string name="length">长度</string>
    <string name="content">信息不完整，不能保存，是否继续填写?</string>
    <string name="content1">是否保存航点信息?</string>
    <string name="content2">是否删除当前航点?</string>
    <string name="content2_1">当前航点被其他航线使用，是否删除当前航点?</string>
    <string name="content3">是否删除全部航点?</string>
    <string name="content3_1">有的点在航线中被使用,是否删除全部航点?</string>
    <string name="content4">是否保存航线?</string>
    <string name="content5">航点不够,不能保存,是否继续添加?</string>
    <string name="content6">是否删除当前航线?</string>
    <string name="content7">是否删除全部航线?</string>
    <string name="content8">是否删除当前航迹?</string>
    <string name="content9">是否删除全部航迹?</string>
    <string name="content10">是否保存当前航迹?</string>
    <string name="content11">是否保存全部航迹?</string>
    <string name="content12">是否保存这段轨迹?</string>
    <string name="savemeasure">是否保存长度/面积计算信息?</string>
    <string name="content13">是否删除当前轨迹?</string>
    <string name="content14">是否删除全部轨迹?</string>
    <string name="content15">成功保存</string>
    <string name="ok">是</string>
    <string name="ok1">确定</string>
    <string name="no">否</string>
    <string name="calibration_point">标定航点</string>
    <!-- 已存航点界面 -->
    <string name="title_activity_point_exist">已存航点</string>
    <string name="title_activity_point_manager">航点管理</string>
    <string name="search">查找</string>
    <string name="search_hint">&lt;请输入名称 &gt;</string>
    <string name="point_name">名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称</string>
    <string name="point_distance">距&#160;&#160;&#160;&#160;离</string>
    <string name="point_add">添加航点</string>
    <string name="point_change">编辑航点</string>
    <string name="point_warn">设为警告点</string>
    <string name="point_map">地图</string>
    <string name="point_navigation">导航</string>
    <string name="point_sort_by_name">按名称排序</string>
    <string name="point_sort_by_diatance">按距离排序</string>
    <string name="point_delete_one">删除当前</string>
    <string name="point_delete_all">删除全部</string>
    <string name="title_activity_point">PointActivity</string>
    <string name="result">没有航点</string>
    <string name="exite">没有已存航点</string>

    <!-- 已存航线界面 -->
    <string name="title_activity_exiting_line">已存航线</string>
    <string name="manager_line">航线管理</string>
    <string name="point_num">点&#160;&#160;&#160;&#160;数</string>
    <string name="line_new">新建</string>
    <string name="title_activity_line_manager">LineManagerActivity</string>
    <string name="line_add">添加航线</string>
    <string name="line_change">编辑航线</string>
    <string name="area_length">计算长度面积</string>
    <string name="opposite_navigation">反向导航</string>
    <string name="copy_line">拷贝航线</string>

    <!-- 航迹管理界面 -->
    <string name="title_activity_path_manager_first">航迹管理</string>
    <string name="remember_line">记录航线</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="clear">清空</string>
    <string name="show">显&#160;&#160;&#160;&#160;示</string>
    <string name="title_activity_path_manager_second">PathManagerSecondActivity</string>
    <string name="path_change">编辑</string>
    <string name="title_activity_path_save">保存航迹</string>
    <string name="star_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="points_num">点个数</string>

    <!-- 新建航线界面 -->
    <string name="title_activity_new_line">新建航线</string>
    <string name="distance">距离:&#160;&#160;&#160; </string>
    <string name="azimuth">方位角:&#160;&#160;&#160; </string>
    <string name="type">类型</string>
    <string name="thicklines">粗线</string>
    <string name="thinlines">细线</string>
    <string name="color">颜色</string>
    <string name="next">请选择下一个点</string>
    <string name="title_activity_line">航线</string>
    <!-- 拍照界面 -->
    <string name="title_activity_take_picture">拍照</string>
    <string name="savepicture">保存到轨迹</string>
    <string name="title_activity_system_setting">SystemSettingActivity</string>
    <!-- 坐标设置界面 -->
    <string name="title_activity_coordinate_set">坐标设置</string>
    <string name="coordinate_system">&#160;&#160;坐标系统</string>
    <string name="coordinate_system1">地理坐标系统</string>
    <string name="coordinate_syste2">投影坐标系统</string>
    <string name="coordinate_type">&#160;&#160;椭球类型</string>
    <string name="coordinate_user">&#160;&#160;用户坐标单位</string>
    <string name="coordinate_1">WGS84</string>
    <string name="coordinate_2">北京54</string>
    <string name="coordinate_3">西安80</string>
    <string name="coordinate_4">自定义</string>
    <string name="pro_1">高斯--克吕格投影</string>
    <string name="pro_2">墨卡托投影</string>
    <string name="pro_3">阿尔伯特投影</string>
    <string name="ellipse_1">GRS75</string>
    <string name="ellipse_2">GRS80</string>
    <string name="ellipse_3">克拉索夫斯基1940</string>
    <string name="unit_1">度度度.度度度°</string>
    <string name="unit_2">度度.分分′</string>
    <string name="unit_3">度度.分分.秒秒″</string>

    <!-- 单位设置界面 -->
    <string name="title_activity_unit_set">单位设置</string>
    <string name="speed">速度</string>
    <string name="speed_set1">米/秒</string>
    <string name="speed_set2">千米/小时</string>
    <string name="length11">长度</string>
    <string name="length_set1">米</string>
    <string name="length_set2">千米</string>
    <string name="area">面积</string>
    <string name="area_set1">平方米</string>
    <string name="area_set2">平方千米</string>
    <string name="time_set">时间</string>
    <string name="time_set1">24小时制</string>
    <string name="time_set2">12小时制</string>
    <string name="timezone">时区</string>
    <string name="timezone_set1">东六时区</string>
    <string name="timezone_set2">东七时区</string>
    <string name="timezone_set3">东八时区</string>
    <!-- 地图设置界面 -->
    <string name="title_activity_map_set">地图设置</string>
    <string name="map_set1">地图文件:</string>
    <string name="map_set2">离线文件:</string>
    <string name="mapadd_set1">地图文件</string>
    <string name="mapadd_set2">离线文件</string>

    <!-- 采线采面积界面 -->
    <string name="name">名称</string>
    <string name="piancha">左/右偏</string>
    <string name="jiediannum">节点数</string>
    <string name="title_activity_coollect_line">采线</string>
    <string name="circ">周长</string>
    <string name="dingdiannum">顶点数</string>
    <string name="tianchongcolor">填充色</string>
    <string name="title_activity_collect_area">采面</string>
    <!-- 旅行计算器界面 -->
    <string name="title_activity_trip_calculator">旅行计算器</string>
    <string name="tripcalculator">累计行程</string>
    <string name="maxspeed">最大速度</string>
    <string name="movetime">移动时间</string>
    <string name="avespeed">平均移动速度</string>
    <string name="allspeed">全程移动速度</string>
    <string name="endlength">导航最终距离</string>

    <!-- 卫星信息界面 -->
    <string name="satellite_n">N:40.051168°</string>
    <string name="satellite_e">E:116.293958°</string>
    <string name="satellite_h">H:293</string>
    <string name="satellite_state">状态:3D</string>
    <string name="satellite_pr">精度:3米</string>
    <!-- 面积量算界面 -->
    <string name="title_activity_area_measurement">长度/面积计算</string>
    <string name="measure">计算</string>
    <string name="weixingnum">卫星数</string>
    <string name="read">读取</string>
    <string name="star">开始</string>
    <string name="end">结束</string>
    <string name="delect">删除</string>
    <string name="look">查看详情</string>
    <string name="savesd">保存到SD卡</string>
    <string name="title_activity_measure">MeasureActivity</string>
    <string name="title_activity_exiting_note">已存记录</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_save_path_manager">SavePathManagerActivity</string>
    <string name="set">设置</string>
    <string name="savenow">保存当前</string>
    <string name="saveall">保存全部</string>
    <string name="pathlendth">轨迹长度</string>
    <string name="savesuccss">航迹保存失败，可能是点相邻太近的原因</string>
    <string name="savenosuccss">保存失败，可能是点相邻太近的原因</string>
    <string name="savelinesuccss">航线保存失败，可能是点相邻太近的原因</string>
    <string name="saveallsuccss">航迹保存中有保存失败的，可能是点离得太近的原因</string>
    <string name="cleartitle">正在记录轨迹，不能清除保存的点</string>
    <string name="clearmag">是否清除保存的所有点?</string>
    <string name="na">N/A</string>
    <string name="space">——</string>
    <string name="about">关于我们</string>
    <string name="title_activity_logo">LogoActivity</string>

    <!-- 激活界面界面 -->
    <string name="title_activity_activation">ActivationActivity</string>
    <string name="activation_mark">激活软件，请输入激活码，如果没有激活码，请联系供应商解决！</string>
    <string name="activation_deviceid">设备“特征号”</string>
    <string name="activation_accode">请输入“激活码”</string>
    <string name="activation_ac">激活</string>
    <string name="activation_sure">确认</string>
    <string name="activation_explain1">版权所有，盗版必究</string>
    <string name="activation_explain2">北京天泰北斗科技有限公司</string>
    <string name="activation_explain3">www.tato.cn 010-51650997</string>
    <string name="title_activity_about">关于我们</string>

</resources>