<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:background="@drawable/input_header" 
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:text="@string/title"
        style="@style/common_style_for_16sp"
       />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#000000" />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dip"
        style="@style/common_style_for_16sp"
        />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <Button
            android:id="@+id/btn_yes"
            android:layout_marginTop="30dip"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
             style="@style/common_style_for_16sp"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_marginTop="30dip"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
             style="@style/common_style_for_16sp" />
</LinearLayout>
</LinearLayout>