<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pointmanager_bg"
    android:orientation="vertical"
    tools:context=".TripCalculatorFragment" >

    <include layout="@layout/layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dip"
        android:layout_marginTop="10dip" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="@drawable/lin_bg"
            android:orientation="vertical" >

            <TextView
                style="@style/common_style_for_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/tripcalculator" />

            <TextView
                android:id="@+id/text_tripcalculator"
                style="@style/common_style_for_32sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:background="@drawable/lin_bg"
            android:orientation="vertical" >

            <TextView
                style="@style/common_style_for_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/maxspeed" />

            <TextView
                android:id="@+id/text_maxspeed"
                style="@style/common_style_for_32sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:text="@string/na" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dip" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="@drawable/lin_bg"
            android:orientation="vertical" >

            <TextView
                style="@style/common_style_for_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/movetime" />

            <TextView
                android:id="@+id/text_movetime"
                style="@style/common_style_for_32sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="90dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:background="@drawable/lin_bg"
            android:orientation="vertical" >

            <TextView
                style="@style/common_style_for_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/avespeed" />

            <TextView
                android:id="@+id/text_avespeed"
                style="@style/common_style_for_32sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:text="@string/na" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dip" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="@drawable/lin_bg"
            android:orientation="vertical" >

            <TextView
                style="@style/common_style_for_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/end_time" />

            <TextView
                android:id="@+id/text_end_time"
                style="@style/common_style_for_32sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:background="@drawable/lin_bg"
            android:orientation="vertical" >

            <TextView
                style="@style/common_style_for_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/allspeed" />

            <TextView
                android:id="@+id/text_allspeed"
                style="@style/common_style_for_32sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:text="@string/na" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/list_text" >

        <TextView
            style="@style/common_style_for_20sp"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_weight="3"
            android:gravity="left|center_vertical"
            android:text="@string/high" />

        <TextView
            style="@style/common_style_for_20sp"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/space" />

        <TextView
            android:id="@+id/text_heigth"
            style="@style/common_style_for_20sp"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/na" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/list_text" >

        <TextView
            style="@style/common_style_for_20sp"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_weight="3"
            android:gravity="left|center_vertical"
            android:text="@string/endlength" />

        <TextView
            style="@style/common_style_for_20sp"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/space" />

        <TextView
            android:id="@+id/text_navi_dis"
            style="@style/common_style_for_20sp"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/na" />
    </LinearLayout>

</LinearLayout>