<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pointmanager_bg"
    android:orientation="vertical"
    tools:context=".PointManagerActivity" >

    <include layout="@layout/layout_title_bar" />

    <include layout="@layout/layout_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/point_name1" />

            <TextView
                style="@style/common_style_for_20sp"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/point_name2"
                android:gravity="center"
                android:paddingRight="10dip"
                android:text="@string/point_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="10dip"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/point_name3" />

            <TextView
                style="@style/common_style_for_20sp"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/point_name5"
                android:gravity="center"
                android:text="@string/point_distance" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       
        
        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/common_style_for_24sp"
            android:layout_margin="10dip"
            android:gravity="center"
            android:text="@string/result" />

        <include layout="@layout/layout_listview" />
    </RelativeLayout>
    

</LinearLayout>